--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,16 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "@components/*": ["components/*"],
+      "@screens/*": ["screens/*"],
+      "@hooks/*": ["hooks/*"],
+      "@types/*": ["types/*"],
+      "@api/*": ["api/*"],
+      "@navigation/*": ["navigation/*"],
+      "@types": ["types/index.ts"]
+    }
   }
 }
