feat: add react-native-keyboard-controller dependency, refactor AddNewTagPopover to use Popover component, and enhance LeadListScreen with search and filter functionality

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
       "@types/*": ["types/*"],
       "@api/*": ["api/*"],
       "@navigation/*": ["navigation/*"],
-      "@types": ["types/index.ts"]
+      "@utils/*": ["utils/*"],
+      "@types": ["types/index.ts"],
+      "@utils": ["utils/index.ts"]
     }
   }
 }
