--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.5",
+    "expo-image-picker": "~16.1.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
