--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "api": "json-server --watch db.json --port 3001"
+    "api": "json-server --watch db.json --port 3001",
+    "test": "jest"
   },
   "dependencies": {
     "@csark0812/zustand-expo-devtools": "^2.0.2",
@@ -21,6 +22,7 @@
     "axios": "^1.9.0",
     "expo": "53.0.12",
     "expo-blur": "^14.1.5",
+    "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-mail-composer": "~14.1.4",
     "expo-sms": "~13.1.4",
@@ -34,20 +36,29 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-skeleton-content": "^1.0.28",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
-    "zustand": "^5.0.5",
-    "expo-image-picker": "~16.1.4"
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@babel/preset-typescript": "^7.27.1",
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react-native": "^12.1.5",
+    "@types/jest": "^29.5.11",
     "@types/react": "~19.0.10",
     "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "jest": "^29.7.0",
+    "jest-expo": "^53.0.7",
     "json-server": "^1.0.0-beta.3",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^3.5.3",
+    "react-test-renderer": "19.0.0",
+    "ts-jest": "^29.1.1",
     "typescript": "~5.8.3"
   },
   "type": "module",
