--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@csark0812/zustand-expo-devtools": "^2.0.2",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/elements": "^2.5.2",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
@@ -36,7 +36,6 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-skeleton-content": "^1.0.28",
     "react-native-toast-message": "^2.3.0",
     "react-native-vector-icons": "^10.2.0",
     "zustand": "^5.0.5"
@@ -48,6 +47,8 @@
     "@testing-library/react-native": "^12.1.5",
     "@types/jest": "^29.5.11",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.72.8",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-react": "^7.37.5",
